feat(console): 添加 AI Javadoc 控制台工具窗口
- 新增 JavaDocConsoleToolWindowFactory 类，用于创建底部工具窗口
- 实现 JavaDocConsoleView 项目级别服务，管理控制台视图实例
- 添加多种日志输出方法：普通、成功、警告、错误信息
- 支持时间戳格式化输出和自动显示工具窗口
- 所有日志输出受 verboseLogging 配置控制
- 在 TaskExecutor 和 AICompatibleProvider 中集成控制台日志输出
- 更新设置页面的提示文本，优化用户指引
- 修复代码压缩逻辑，确保格式化操作不影响原始 PSI 元素
- 优化 Prompt 模板加载逻辑，改进空值检查方式